@@ -1,5 +1,10 @@
 2007-07-01  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/api_view.py: Catch AttributeError on slots.
+	* src/lib/accerciser/pyatspi.zip: Updated to revisio 935.
+
+2007-07-01  Eitan Isaacson  <eitan@ascender.com>
+
 	* accerciser.schemas.in: Changed caps on view names.
 	* help/C/accerciser.xml: Updated documentation.
 	* help/C/figures/accerciser.png: Updated screenshot.
